--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
   background: #47778d;
   font-family: "Sarala";
-  color: #3d434e;
+  color: black;
   height: 100%;
   text-align: center;
   font-size: 18px;
@@ -23,7 +23,7 @@ canvas {
   padding: 15px;
 }
 
-h1, h2, h3 {
+h1, h3 {
   
   font-weight: 100;
   text-transform: uppercase;
@@ -32,6 +32,8 @@ h1, h2, h3 {
 
 h1 {
   font-size: 2.6em;
+  color:darksalmon;
+  background-color: #474747;
 }
 
 h2 {
@@ -81,6 +83,7 @@ p {
   display: block;
   padding: 0;
   display: block;
+  color:darksalmon;
 }
 
 #my-word li {
@@ -115,6 +118,7 @@ p {
   font-size: 1.6em;
   text-align: center;
   display: block;
+  color:darksalmon;
 }
 
 button {
